Fix play button hover layout shift

--- a/web/styles.css
+++ b/web/styles.css
@@ -104,7 +104,7 @@ body {
 
 .plyr__control--overlaid:hover {
     background: var(--vhplyr-primary-dark) !important;
-    transform: scale(1.1);
+    transform: translate(-50%, -50%) scale(1.1);
 }
 
 .plyr__control--overlaid svg {
